# interactive-viz

./: eu.kazjote.InteractiveViz.json  example-argument-definition.json  meson.build
data/: eu.kazjote.InteractiveViz.appdata.xml.in  eu.kazjote.InteractiveViz.desktop.in  eu.kazjote.InteractiveViz.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  argument_row.vala  dbus_service.vala  interactive_viz.gresource.xml  interface_definition.vala  main.vala  meson.build  numericBoxRow.ui  numeric_box_row.vala  window.ui  window.vala
